<resources>
    <string name="app_name">triviaApp</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="welcome">Bienvenido</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="see_password">Ver contraseña</string>
    <string name="list_header">Listado de Trivias</string>
    <string name="name_tittle_CV">Nombre:</string>
    <string name="empty">Vacío</string>
    <string name="topic_tittle_CV">Tema:</string>
    <string name="author_tittle_CV">Autor:</string>
    <string name="time_tittle_CV">Tiempo:</string>
    <string name="seconds_sentence_CV">segundos</string>
    <string name="logout_btn">Cerrar Sesión</string>
    <string name="description_lobby_trivia">Estás a punto de iniciar la trivia:</string>
    <string name="start_btn">Iniciar</string>
    <string name="return_btn">Regresar</string>
</resources>